# helping-hands-backend

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  AUTH_FIX_SUMMARY.md  DONATION_TESTING.md  Dockerfile  FRONTEND_INTEGRATION.md  README.md  create_test_user.sh  day2_run.sh  debug_jwt.py  docker-compose.prod.yml  docker-compose.yml  ec2-setup.sh  gunicorn.conf.py  health.txt  locustfile.py  nginx.conf.template  pyproject.toml  realtime_test.html  run.py  test_auth.py  test_db.py
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0011_subdomain_slug_add_subdomain_campaign_slug.py  0012_add_thank_you_winner_email_templates.py  0013_campaign_comments_updates.py  0014_media_embed_type.py  0015_donations_message.py  0016_campaign_platform_fee.py  0017_campaign_giveaway_prize.py  0018_campaign_page_layout.py  0019_org_permissions_task_statuses_tasks.py  0020_users_anonymized_at.py  0021_users_totp_2fa.py  0022_password_reset_tokens.py  0023_ai_site_recipe_and_jobs.py  0024_fee_policy_and_settlements.py  0025_campaign_task_multi_assignees.py  0026_task_activity_system.py  02972acced07_campaigns_table.py  12ba66dce26f_giveaway_logs.py  133cacbd1dfd_stripe_events_dedupe.py  27805e92cdf1_campaign_media_table.py  2e8b328c227d_auth_foundation_users_orgs_org_users.py  7079d9406537_base.py  8052d18a9117_org_email_settings.py  8b68c95af6c1_drop_duplicate_org_slug_constraint.py  b1f49578842a_email_receipts_webhook_view.py  d44573db2e42_donations_table.py  e5f6f9fb2317_campaigns_constraints_indexes.py
app/: __init__.py  routes.py  tasks.py
app/docs/: RELEASE.md  SECURITY.md  api.md  er-diagram.md
app/models/: __init__.py  ai_generation_job.py  campaign.py  campaign_comment.py  campaign_task.py  campaign_task_activity.py  campaign_update.py  donation.py  email_receipt.py  giveaway.py  media.py  org.py  org_email_settings.py  org_permissions.py  org_user.py  settlement.py  (+4 more)
scripts/: seed.py  test_api.py
static/: campaign_stub.html  donate_page.html
tests/: test_campaign_fee_option_lock.py  test_campaign_tasks_auth.py  test_task_comments_activity.py  test_webhook_service.py
(+51 files in other folders)
