[tool.poetry]
package-mode = false

[project]
name = "donations"
version = "1.0.0"
description = "Donations platform (Flask + Postgres + AWS)"
authors = [
    {name = "mowahid latif",email = "mowahidlatif@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "boto3 (>=1.40.25,<2.0.0)",
    "stripe (>=12.5.1,<13.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
    "python-socketio (>=5.13.0,<6.0.0)",
    "eventlet (>=0.40.3,<0.41.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "sendgrid (>=6.11.0,<7.0.0)",
    "rq (>=1.16.0,<2.0.0)",
    "prometheus-client (>=0.21.0,<1.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "qrcode (>=7.4.2,<8.0.0)",
    "pillow (>=10.0.0,<11.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.8"
pre-commit = "^4.3.0"
alembic = "^1.16.4"

